--- a/bitrise.yml
+++ b/bitrise.yml
@@ -26,7 +26,7 @@ workflows:
     steps:
     - activate-ssh-key@4:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4: {}
+    - git-clone@6: {}
     - cache-pull@2: {}
     - install-missing-android-tools@2:
         inputs:
@@ -41,6 +41,17 @@ workflows:
             echo "Building app"
             set -x
             $PROJECT_LOCATION/gradlew assembleDebug
+    - script@1.1.6:
+        title: check artifact
+        inputs:
+        - content: | 
+            #!/bin/bash
+            set -e 
+            
+            #build app
+            cd $PROJECT_LOCATION/app/build/outputs/apk/debug
+            ls
+            pwd
     - deploy-to-bitrise-io@1:
         inputs:
         - notify_user_groups: none
